vlib/v/checker/tests/union_init_having_more_fields_err.vv
pub struct Lines {
pub:
	from u8
	to   u8
	dst  u8
	src  u8
}

pub union Head {
	Lines
pub:
	serial [3]u8
}

pub struct Message {
	Head
pub:
	cmd     u8
	payload []u8
}

fn union_embed__having_more_fields_used() {
	_ := Message{
		from: 1
		src:  1
	}
}

fn union_having_more_fields_used() {
	_ := Head{
		from: 1
		src:  1
	}
}
